Trying to fix horizontal scrolling on apple device

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,10 +19,15 @@ html {
 body {
   background-color: var(--page-background-color);
   font-size: 2.5rem;
-  overflow-x: hidden;
   width: 100vw;
   --max-header-bar-height: 65px;
   padding-top: var(--max-header-bar-height);
+}
+
+html,
+body {
+  position: relative;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
